--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           subscriptionId: e2b5a834-44ee-48a3-866d-dc106a68e0dc
           resourceGroupName: exampleRG
-          template: ./StorageAccount/main.bicep
+          template: ./main.bicep
           failOnStdErr: false
