--- a/azurepipelines.yaml
+++ b/azurepipelines.yaml
@@ -1,1 +1,20 @@
+trigger:
+- main
+
+pool:
+  vmImage: ubuntu-latest
+
+steps:
+- task: AzureResourceManagerTemplateDeployment@3
+  inputs:
+    deploymentScope: 'Resource Group'
+    azureResourceManagerConnection: 'MCAPS-Hybrid-REQ-69120-2024-sbodhankar (e2b5a834-44ee-48a3-866d-dc106a68e0dc)'
+    subscriptionId: 'e2b5a834-44ee-48a3-866d-dc106a68e0dc'
+    action: 'Create Or Update Resource Group'
+    resourceGroupName: 'exampleRG'
+    location: 'East US'
+    templateLocation: 'Linked artifact'
+    csmFile: './main.bicep'
+    csmParametersFile: './parameters.bicepparam'
+    deploymentMode: 'Incremental'
 
